--- a/src/StyleSheets/Button.css
+++ b/src/StyleSheets/Button.css
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<button class="button" style="color: black"><span>START </span></button>
+<button class="button" style="color: black"><span>Start </span></button>
 
 </body>
 </html>
