--- a/src/sample/Button.css
+++ b/src/sample/Button.css
@@ -1,107 +1,10 @@
-/*
-.buttonStart {
-    display: inline-block;
-    border-radius: 4px;
-    border: none;
-    color: green;
-    text-align: center;
-    font-size: 28px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-}
-
-.buttonStart span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.buttonStart span {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.buttonStart:hover span {
-    padding-right: 25px;
-    -fx-background-insets: 0;
-}
-
-.buttonStart:hover span {
-    opacity: 1px;
-    right: 0;
-    -fx-background-insets: 0;
-}
-*/
-
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
+    -fx-background-color: #7cafc2;
+    -fx-text-fill: #FFFFFF;
+    -fx-backrgound-radius: 4px;
+
 }
 
-.button1 {
-    background-color: white;
-    color: black;
-    border: 2px solid #4CAF50;
-}
-
-.button1:hover {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.button2 {
-    background-color: white;
-    color: black;
-    border: 2px solid #008CBA;
-}
-
-.button2:hover {
-    background-color: #008CBA;
-    color: white;
-}
-
-.button3 {
-    background-color: white;
-    color: black;
-    border: 2px solid #f44336;
-}
-
-.button3:hover {
-    background-color: #f44336;
-    color: white;
-}
-
-.button4 {
-    background-color: white;
-    color: black;
-    border: 2px solid #e7e7e7;
-}
-
-.button4:hover {background-color: #e7e7e7;}
-
-.button5 {
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
-}
-
-.button5:hover {
-    background-color: #555555;
-    color: white;
+.button:hover {
+    -fx-background-color: green;
 }
